--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "naotems-poll-app",
-  "version": "1.0.0",
-  "description": "Naotems Department Poll Application with Firebase, React, and Vercel",
-  "main": "src/App.jsx",
+  "name": "naotems-voting-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "firebase": "^10.12.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "firebase": "^10.7.1",
-    "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.8"
   },
   "browserslist": {
     "production": [
